<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".tentang.TentangFragment">

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_me"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_facebook"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="@string/fb_com_surelabsid"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/telegram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_telegram"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="@string/t_me_sigitsuryono25"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_instagram"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/instagram_com_sigitsuryono0225"
        android:textColor="@color/black"
        android:textStyle="bold" />
</LinearLayout>